--- a/contact.html
+++ b/contact.html
@@ -183,10 +183,10 @@
 						Írjon üzenetet
 						</h2>
 						<p class="subheading text-center">Ha kérdése van, írjon üzenetet és hamarosan felvesszük Önnel a kapcsolatot!</p>
+                      <div class="kep" style="display:flex; justify-content: center; align-items: center; margin: 2rem;">
+                            <img src="images/kutya6.jpg" style="width: 600px;">
+                            </div>
 					</div>
-
-
-
 					<div class="col-12 col-sm-12 col-md-12">
 						<form action="#" class="form-contact" id="contactForm" data-toggle="validator" novalidate="true">
 							<div class="row">
@@ -243,11 +243,11 @@
 				<div class="row">
 					<div class="col-sm-6 col-md-4">
 						<div class="footer-item">
-							<img src="images/Dr.Petlogo.jpg" alt="Dr.Pet logo" class="logo-bottom">
+							<img src="images/Dr.Petlogo.jpg" style="width: 30%; " alt="Dr.Pet logo" class="logo-bottom">
 							<div class="spacer-20"></div>
 							<p>Stresszmentes gyógyulás kutyáknak és macskáknak!</p>
 							<div class="spacer-20"></div>
-							
+							<a href="adkt.html">Adatkezelési tájékoztató</a>
 						</div>
 					</div>
 
