--- a/felelosgazdi.html
+++ b/felelosgazdi.html
@@ -304,11 +304,11 @@ GLS Futár utánvéttel: 1390,- Ft
 				<div class="row">
 					<div class="col-sm-6 col-md-4">
 						<div class="footer-item">
-							<img src="images/Dr.Petlogo.jpg" alt="Dr.Pet logo" class="logo-bottom">
+							<img src="images/Dr.Petlogo.jpg" style="width: 30%;" alt="Dr.Pet logo" class="logo-bottom">
 							<div class="spacer-20"></div>
 							<p>Stresszmentes gyógyulás kutyáknak és macskáknak!</p>
 							<div class="spacer-20"></div>
-							
+							<a href="adkt.html">Adatkezelési tájékoztató</a>
 						</div>
 					</div>
 
