--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 		</div>
 
     </div>
-<img src="images/Dr.Petlogo.jpg" style="display: inline-block; width: 30%; position: relative; top: 7rem; z-index:2 ;" alt="Slider">
+<div class="logo-container" style="display: inline-block; position: relative; top: 7rem; z-index:2;">
+<img src="images/Dr.Petlogo.jpg" alt="Slider" style="width: 50%;">
+  </div>
 	<!-- BANNER -->
     <div class="container">
       </div>
@@ -147,13 +149,26 @@ AZ ÁLLATORVOSOK AJÁNLÁSÁVAL!
 
 							</h2>
 							<p class="uk21"><strong>A Dr.Pet</strong> azért jött létre, hogy megkönnyítse a kisállatok műtét utáni gyógyulását, ezért megalkotta Magyarországon azt a kényelmes gallért melyet a hagyományos műanyag "lámpabúra" gallér helyett ajánlunk, hogy csökkentse a stresszt a kutyák és macskák kisebb sérülése, bőrbetegsége vagy műtéti lábadozása esetén.</p>
-							<p class="uk21">A legtöbb állat a műanyag gallérban lesokkolódik, félve közlekedik, mert mindennek nekimennek, ezenkívül enni és inni is alig mernek benne. Gondolom sokak megtapasztalták már ezt a saját kedvencükkel. Ellentétben a műanyag gallérral, a kényelmes gallérok nem korlátozzák a látóteret, így a kutya vagy a macska kevésbé valószínű, hogy nekimegy a bútoroknak, könnyebben tudnak enni és inni, illetve kényelmesen tudnak aludni is benne.
+                            <div class="kep" style="display:flex; justify-content: flex-start0; margin: 2rem 0;">
+                            <img src="images/kutyus1.jpg">
+                            </div>
+							<p class="uk21">A legtöbb állat a műanyag gallérban lesokkolódik, félve közlekedik, mert mindennek nekimennek, ezenkívül enni és inni is alig mernek benne. Gondolom sokak megtapasztalták már ezt a saját kedvencükkel. Ellentétben a műanyag gallérral, a kényelmes gallérok nem korlátozzák a látóteret, így a kutya vagy a macska kevésbé valószínű, hogy nekimegy a bútoroknak, könnyebben tudnak enni és inni, illetve kényelmesen tudnak aludni is benne.</p>
+                              <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/kutyus2.jpg" style="width: 60%;">
+                            </div>
+                          <p class="uk21">
                           Először polisztirol gyönggyel töltött gallérral próbálkoztunk, de elvetettük az ötletet, mert a tesztek során hamar kiderült, hogy pár nap alatt összeesik, deformálódik, szakadás esetén veszélyessé válik.
-
 Más töltőanyaggal is próbálkoztunk, de sorra elbuktak a felfújható gallér mellett a tesztelések során. Miután a felfújható gallér bizonyosodott a legjobbnak, így magas minőséggel kezdtük el gyártani. Gallérjainkat folyamatosan tesztelve, állatorvosokkal konzultálva jutottunk el a jelenleg kapható termékekhez.</p>
+                          <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/kutyus3.jpg" style="width: 60%;">
+                            </div>
 							<p class="uk21 ">A sima <strong>STANDARD</strong> méretsor mellé megalkottunk egy dupla széles méretsort is, melyet <strong style="color: red;">BIG BOY</strong> márkanévvel láttunk el. Ez a fajta gallér hatékonyabb a sima felfújható gallérnál, mert extra széles és extra dundi kivitelben készül.
 
-                              A hiedelmekkel ellentétben, a felfújható gallér rendkívül erős, köszönhetően a rendkívül erős anyagból készült huzatnak és a speciális anyagból készült felfújható belsőnek. A gallérjaink formatartóak, többször felhasználhatóak, és nem utolsó sorban pille könnyűek, egész kicsire összehajtva elrakhatóak.
+                              A hiedelmekkel ellentétben, a felfújható gallér rendkívül erős, köszönhetően a rendkívül erős anyagból készült huzatnak és a speciális anyagból készült felfújható belsőnek. A gallérjaink formatartóak, többször felhasználhatóak, és nem utolsó sorban pille könnyűek, egész kicsire összehajtva elrakhatóak.</p>
+                               <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/cica.jpg" style="width: 60%;">
+                            </div>
+                          <p class="uk21 ">
                           Jelenleg tehát kétféle műtéti gallért gyártunk és forgalmazunk, az egyik a sima STANDARD felfújható gallér a másik pedig a BIG BOY dupla széles felfújható gallér, melyeket sötétkék és most már pink színben is forgalmazunk.
 
 Mindkét gallér antiallergén és extra széles kivitelben készül, a BIG  BOY gallér pedig az extra szélessége mellett extra dundi is.</p>
@@ -190,7 +205,7 @@ Kedvence érdekében, ne vásároljon gyenge minőségű utánzatot, esetlegesen
 					<div class="col-12 col-sm-6 col-md-4">
 						<div class="rs-image-box">
 							<div class="media">
-								<a href="shop-single.html"><img src="images/IMG_7007-1.jpg" alt="Standard gallér" class="img-fluid"></a>
+								<a href="shop-single.html"><img src="images/IMG_7022-1.jpg" alt="Standard gallér" class="img-fluid"></a>
 							</div>
                             <img src="images/Standard.jpg" alt="standard gallér" style="width: 40%;">
 							<div class="body-text">
@@ -220,8 +235,7 @@ Kedvence érdekében, ne vásároljon gyenge minőségű utánzatot, esetlegesen
 								<a href="felelosgazdi.html"><img src="images/borito.jpg" alt="" class="img-fluid" width="57%"></a>
 							</div>
 							<div class="body-text">
-								<h4 class="title"><a href="felelosgazdi.html">Könyv - Felelős gazdi vagyok</a></h4>
-						      írta: Farkas Ditta
+								<h4 class="title"><a href="felelosgazdi.html">Könyv - Felelős gazdi vagyok</a></h4> 
 							</div>
 						</div>
 					</div>
@@ -247,11 +261,11 @@ Kedvence érdekében, ne vásároljon gyenge minőségű utánzatot, esetlegesen
 				<div class="row">
 					<div class="col-sm-6 col-md-4">
 						<div class="footer-item">
-							<img src="images/Dr.Petlogo.jpg" alt="Dr.Pet logo" class="logo-bottom">
+							<img src="images/Dr.Petlogo.jpg" style="width: 30%;" alt="Dr.Pet logo" class="logo-bottom">
 							<div class="spacer-20"></div>
 							<p>Stresszmentes gyógyulás kutyáknak és macskáknak!</p>
 							<div class="spacer-20"></div>
-							
+							<a href="adkt.html">Adatkezelési tájékoztató</a>
 						</div>
 					</div>
 
