--- a/shop-single.html
+++ b/shop-single.html
@@ -196,19 +196,40 @@ KUTYÁK ÉS MACSKÁK RÉSZÉRE</p>
 									<p class="uk18 text-black mb-1">
 										<strong>Leírás</strong>
 									</p>
-									<p>A gallért a gumibelső felfújó szelepének összenyomásával lehet felfújni, akár egy úszógumit. A felfújt gallér, mint egy párna öleli körül a nyakat, mely korlátozottá teszi az állat nyakának mozgását. A gallért tépőzár segítségével lehet összezárni az állat nyakán.A gallér belsejében található szövet fülek az a célt szolgálják, hogy a kutya nyakörvét vagy egy gézcsíkot bele lehessen húzni, mivel ha csak simán a tépőzárral tesszük fel az állatra, úgy le tudja szedni a gallért magáról.A gallér anyaga ha koszos lesz, vizes ruhával tisztára törölhető, vagy kézzel mosható.Nagyon fontos a pontos illeszkedés. A gallér teljesen felfújt állapotban vegye körül a nyakat, illetve pici hézag lehet. Ha két méret között gondolkodik, akkor mindig a nagyobbat kell választani, még ha az nagynak is fog kicsit tűnni a kutyán/cicán. Leesni nem tud róla, hiszen nyakörvvel rögzítve van, viszont a nagyobb lesz hatékonyabb.Számos visszajelzés alapján a gallér több esetben a mancsokon kívül teljes testen működött, de sajnos itt is vannak kivételek, így azt mondhatjuk hogy a felfújható gallér hatékonysága a szürkével jelölt területen 100%-os, a fekete területeken ez a hatékonyság függ a kutya fajtájától, felépítésétől, habitusától.A gallért minden esetben úgy tegyük fel a kutyára, hogy a szelep lefelé álljon, ezzel megakadályozva azt, hogy a kutya el tudja elérni, esetleg megrágni!A felfújható gallér kiválóan alkalmazható hidroterápiás kezelések során, illetve biztonságos úsztatáshoz is!<br>
-<br>A DR.PET STANDARD FELFÚJHATÓ GALLÉROK
+									<p>A gallért a gumibelső felfújó szelepének összenyomásával lehet felfújni, akár egy úszógumit. A felfújt gallér, mint egy párna öleli körül a nyakat, mely korlátozottá teszi az állat nyakának mozgását. A gallért tépőzár segítségével lehet összezárni az állat nyakán.</p>
+                                       <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/kutya4.jpg" style="width: 30%;">
+                            </div><p>
+                                  A gallér belsejében található szövet fülek az a célt szolgálják, hogy a kutya nyakörvét vagy egy gézcsíkot bele lehessen húzni, mivel ha csak simán a tépőzárral tesszük fel az állatra, úgy le tudja szedni a gallért magáról.
+                                  <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/drpet1.jpg" style="width: 30%;">
+                            </div>
+                                  <p>
+                                  A gallér anyaga ha koszos lesz, vizes ruhával tisztára törölhető, vagy kézzel mosható.Nagyon fontos a pontos illeszkedés. A gallér teljesen felfújt állapotban vegye körül a nyakat, illetve pici hézag lehet. Ha két méret között gondolkodik, akkor mindig a nagyobbat kell választani, még ha az nagynak is fog kicsit tűnni a kutyán/cicán. Leesni nem tud róla, hiszen nyakörvvel rögzítve van, viszont a nagyobb lesz hatékonyabb.
+                                     <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/cica.jpg" style="width: 30%;">
+                            </div><p>
+                                    Számos visszajelzés alapján a gallér több esetben a mancsokon kívül teljes testen működött, de sajnos itt is vannak kivételek, így azt mondhatjuk hogy a felfújható gallér hatékonysága a szürkével jelölt területen 100%-os, a fekete területeken ez a hatékonyság függ a kutya fajtájától, felépítésétől, habitusától.
+                                  <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/lefed.jpg" style="width: 30%;">
+                            </div><p>
+                                  A gallért minden esetben úgy tegyük fel a kutyára, hogy a szelep lefelé álljon, ezzel megakadályozva azt, hogy a kutya el tudja elérni, esetleg megrágni!A felfújható gallér kiválóan alkalmazható hidroterápiás kezelések során, illetve biztonságos úsztatáshoz is!</p>
+                                   <div class="kep" style="display:flex; justify-content: flex-start; margin: 2rem 0;">
+                            <img src="images/kutyauszik.jpg" style="width: 30%;">
+                            </div>
+                                  <br>
+<br><p>A DR.PET STANDARD FELFÚJHATÓ GALLÉROK
 
 6 MÉRETBEN KAPHATÓAK
 </p>
 									<ul>
 										<li>MÉRETEK NYAK KERÜLET ALAPJÁN:</li>
-										<li>XS 15 cm-ig          4290,- Ft</li>
-										<li>S 16-23 cm            4490,- Ft</li>
-										<li>M 24-32 cm            4690,- Ft</li>
-										<li>L 33-38 cm             4890,- Ft</li>
-										<li>XL 39-46 cm           5090,- Ft</li>
-										<li>XXL 47-60 cm         5290,- Ft</li>
+										<li>XS 15 cm-ig          4790,- Ft</li>
+										<li>S 16-23 cm            4990,- Ft</li>
+										<li>M 24-32 cm            5190,- Ft</li>
+										<li>L 33-38 cm             5390,- Ft</li>
+										<li>XL 39-46 cm           5590,- Ft</li>
+										<li>XXL 47-60 cm         5790,- Ft</li>
 									
 									</ul>
 								</div>
@@ -320,11 +341,11 @@ KUTYÁK ÉS MACSKÁK RÉSZÉRE</p>
 				<div class="row">
 					<div class="col-sm-6 col-md-4">
 						<div class="footer-item">
-							<img src="images/Dr.Petlogo.jpg" alt="Dr.Pet logo" class="logo-bottom">
+							<img src="images/Dr.Petlogo.jpg" style="width: 30%;" alt="Dr.Pet logo" class="logo-bottom">
 							<div class="spacer-20"></div>
 							<p>Stresszmentes gyógyulás kutyáknak és macskáknak!</p>
 							<div class="spacer-20"></div>
-							
+							<a href="adkt.html">Adatkezelési tájékoztató</a>
 						</div>
 					</div>
 
