--- a/page-appointment-form.html
+++ b/page-appointment-form.html
@@ -363,6 +363,15 @@
 							</ul>
 						</div>
 					</div>
+                    <div class="col-sm-6 col-md-4">
+						<div class="footer-item">
+							<div class="footer-title">
+								<strong>Viszonteladó partnerek</strong>
+							</div>
+							<p>Nincs üzletünk, így tõlünk csak rendelni tud a honlapunkon keresztül! Amennyiben személyesen szeretne vásárolni, úgy keresse a honlapunkon található <a href="blog.html">Viszonteladó Partnereink</a> egyikét.</p>
+							
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -375,10 +384,7 @@
 					</div>
 					<div class="col-sm-6 col-md-6">
 						<div class="sosmed-icon d-inline-flex float-right">
-							<a href="#"><i class="fa fa-facebook"></i></a> 
-							<a href="#"><i class="fa fa-twitter"></i></a> 
-							<a href="#"><i class="fa fa-instagram"></i></a> 
-							<a href="#"><i class="fa fa-pinterest"></i></a> 
+						<a href="https://www.facebook.com/drpetfelfujhatogaller"><i class="fa fa-facebook"></i></a> 
 						</div>
 					</div>
 				</div>
