--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,9 @@
                                   <a class="dropdown-item" href="felelosgazdi.html">Könyv - Felelős gazdi vagyok! </a>
 							    </div>
 			                </li>
+                          <li class="nav-item">
+			                    <a class="nav-link" href="#">MEGRENDELÉS</a>
+			                </li>
                            <li class="nav-item">
 			                    <a class="nav-link" href="blog.html">PARTNEREINK</a>
 			                </li>
@@ -236,7 +239,7 @@
 				<div class="row">
 					<div class="col-sm-6 col-md-4">
 						<div class="footer-item">
-							<img src="images/Dr.Petlogo.jpg" style="width: 30%;" alt="Dr.Pet logo" class="logo-bottom">
+							<img src="images/Dr.Petlogo.png" style="width: 30%;" alt="Dr.Pet logo" class="logo-bottom">
 							<div class="spacer-20"></div>
 							<p>Stresszmentes gyógyulás kutyáknak és macskáknak!</p>
 							<div class="spacer-20"></div>
@@ -282,6 +285,15 @@
 							</ul>
 						</div>
 					</div>
+                    <div class="col-sm-6 col-md-4">
+						<div class="footer-item">
+							<div class="footer-title">
+								<strong>Viszonteladó partnerek</strong>
+							</div>
+							<p>Nincs üzletünk, így tõlünk csak rendelni tud a honlapunkon keresztül! Amennyiben személyesen szeretne vásárolni, úgy keresse a honlapunkon található <a href="blog.html">Viszonteladó Partnereink</a> egyikét.</p>
+							
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -290,15 +302,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6 col-md-6">
-                      <p class="ftex">&copy; 2021 DR.PET 
+                      <p class="ftex">&copy; 2022 DR.PET 
                  
 					</div>
 					<div class="col-sm-6 col-md-6">
 						<div class="sosmed-icon d-inline-flex float-right">
-							<a href="#"><i class="fa fa-facebook"></i></a> 
-							<a href="#"><i class="fa fa-twitter"></i></a> 
-							<a href="#"><i class="fa fa-instagram"></i></a> 
-							<a href="#"><i class="fa fa-pinterest"></i></a> 
+						<a href="https://www.facebook.com/drpetfelfujhatogaller"><i class="fa fa-facebook"></i></a> 
 						</div>
 					</div>
 				</div>
