--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dr.Pet - kutyagallér</title>
+    <title>Dr.Pet - műtéti gallérok, kutyák és macskák részére</title>
     <meta name="description" content="Kényelmes, felfújható műtéti gallérok, kutyák és macskák részére. Válaszd Te is a DR.Pet termékeket, az állatorvosok ajánlásával.">
 	<meta name="keywords" content="kutyagallér, műtéti gallér">
     
